@startuml
package "Service Auth / Identité" {
    class Utilisateur {
        - id : UUID
        - email : String
        - mot_de_passe_hash : String
        - role : String
    }
}

package "Service Galerie (Domaine)" {
    class Photographe {
        - id : UUID
        - utilisateur_id : UUID
        - nom : String
    }

    class Galerie {
        - id : UUID
        - titre : String
        - description : String
        - est_privee : Boolean
        - clef_acces : String
        - date_creation : DateTime
    }

    class Photo {
        - id : UUID
        - clef_stockage : String
        - titre : String
        - date_upload : DateTime
    }

    class Commentaire {
        - id : UUID
        - nom_visiteur : String
        - texte : String
        - date_publication : DateTime
    }
}

Utilisateur "1" -right- "1" Photographe : est lié à >

Photographe "1" -- "0..*" Galerie : possède >
Galerie "1" *-- "0..*" Photo : contient >
Photo "1" -- "0..*" Commentaire : possède >

@enduml